<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="admob_id">a15325de6a90613</string>
    <string name="app_id">647991588588557</string>
    
    <string name="app_name">WC</string>
    <string name="action_settings">Settings</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    
    <string name="info_content">LOD Entertainment\n2014\n\nVersion 1.0</string>
    
    <!-- Button -->
    <string name="btn_setting_cancel">Cancel</string>
    <string name="btn_setting_save">Save</string>
    <string name="btn_info_close">Close</string>
    
    <string name="tv_setting_team_favorite_title">Favorite team</string>
    <string name="btn_setting_team_favorite_change">Change</string>
    <string name="msg_favorite_team_change">You can change favorite team in Setting menu</string>
    
    <!-- Thumb credit -->
    <string name="credit_afp">&#169;AFP</string>
    <string name="credit_getty_image">&#169;Getty Images</string>
    <string name="credit_fifa">&#169;Fifa.com</string>

    <string name="title_fragment_schedule">Fixtures</string>
    <string name="title_fragment_profile">Profile</string>
    <string name="title_fragment_standing">Standings</string>
    
    <!-- Title actionbar -->
    <string name="title_team_selection">Select favorite team</string>
    <string name="title_group">Group</string>
    <string name="title_fixtures">Fixtures</string>
    <string name="title_setting">Setting</string>
    <string name="title_team_detail">Team detail</string>
    <string name="title_dialog_info">INFO</string>
    
    <!-- BUTTOM TITLE -->
    <string name="btn_select_team_favorite">Select your team</string>
    <string name="btn_group">GROUP</string>
    <string name="btn_schedule">FIXTURES</string>
    <string name="btn_done">Done</string>
    <string name="btn_cancel">Cancel</string>
    <string name="share">Share</string>
    <string name="setting">Setting</string>
    <string name="info">Info</string>
    
    <!-- Countdown table -->
    <string name="count_down_days">DAYS</string>
    <string name="count_down_day">DAY</string>
    <string name="count_down_hours">HOURS</string>
    <string name="count_down_hour">HOUR</string>
    <string name="count_down_minutes">MINUTES</string>
    <string name="count_down_minute">MINUTE</string>
    <string name="count_down_seconds">SECONDS</string>
    <string name="count_down_second">SECOND</string>
    
    <!-- MATCH TITLE -->
    <string name="btn_match_team">match</string>
    <string name="btn_match_group">Group stage</string>
    <string name="btn_match_round_16">Round of 16</string>
    <string name="btn_match_quarter_final">Quarter-finals</string>
    <string name="btn_match_semi_final">Semi-finals</string>
    <string name="btn_match_third">Third place</string>
    <string name="btn_match_final">Final</string>
    
    <!-- TABLE STANDING TITLE -->
    <string name="standing_team">Team</string>
    <string name="standing_match_played">MP</string>
    <string name="standing_win">W</string>
    <string name="standing_draw">D</string>
    <string name="standing_lose">L</string>
    <string name="standing_goal_for">GF</string>
    <string name="standing_goal_againts">GA</string>
    <string name="standing_points">Pts</string>
    
    <!-- NOTES -->
    <string name="note_time_zone_schedule">Time is displayed in your timezone</string>
    
        <string name="error_config">Please set the %1$s constant and recompile the app.</string>
    <string name="already_registered">Device is already registered on server.</string>
    <string name="gcm_registered">From GCM: device successfully registered!</string>
    <string name="gcm_unregistered">From GCM: device successfully unregistered!</string>
    <string name="gcm_message">From GCM: you got message!</string>
    <string name="gcm_error">From GCM: error (%1$s).</string>
    <string name="gcm_recoverable_error">From GCM: recoverable error (%1$s).</string>
    <string name="gcm_deleted">From GCM: server deleted %1$d pending messages!</string>
    <string name="server_registering">Trying (attempt %1$d/%2$d) to register device on Demo Server.</string>
    <string name="server_registered">From Demo Server: successfully added device!</string>
    <string name="server_unregistered">From Demo Server: successfully removed device!</string>
    <string name="server_register_error">Could not register device on Demo Server after %1$d attempts.</string>
    <string name="server_unregister_error">Could not unregister device on Demo Server (%1$s).</string>
    <string name="options_register">Register</string>
    <string name="options_unregister">Unregister</string>
    <string name="options_clear">Clear</string>
    <string name="options_exit">Exit</string>
    
    <string name="progress_dialog_title">Fetching new data...</string>
</resources>
